# minishell

./: .gitignore  .gitmodules  Doxyfile  Makefile  README.md  a  flake.nix  meson.build  readline.supp  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/ssh/: action.yml
.github/actions/submodules/: action.yml
.github/workflows/: auto-docs.yml  norminette.yml  sanity_checks.yml  test.yml
github/workflows/: test.yml
includes/: builtin.h  ctx.h  exec.h  input.h  minishell.h  parser.h  signals.h  tokenizer.h  utils.h
src/: README.md  main.c
src/built-in/: README.md  TODO.md  builtin_utils.c  cd_core.c  env.c  env_utils.c
src/built-in/_cd/: cd_core.c  cd_helpers.c
src/built-in/_echo/: echo_core.c
src/built-in/_exit/: exit.c  exit_core.c  exit_utils.c
src/built-in/_export/: export_core.c  export_utils.c
src/built-in/_pwd/: pwd_core.c
src/built-in/_unset/: unset_core.c
src/builtin/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/builtin/helper/: builtin_utils.c  cd_utils.c  exit_utils.c  export_utils.c
src/ctx/: init.c
src/exec/: TODO.md  applies_expand.c  exec_builtin.c  exec_builtin_helper.c  exec_cmd.c  exec_core.c  exec_error.c  exec_expand.c  exec_expand_helper.c  exec_external.c  exec_fd.c  exec_heredoc.c  exec_heredoc_helper.c  exec_logical.c  exec_pipe.c  exec_redir.c  exec_wait.c
src/input/: fish.c
src/parser/: .parser.h.swp  TODO.md  ast_node_helper.c  clean_up.c  parse_command.c  parse_command_helper.c  parse_command_helpers.c  parse_simple_command.c  parser.h  parser_free.c  pipe_parse.c  redirection_create.c  redirection_parse.c  redirection_utils.c  redirections_utils.c  simple_command_utils.c  token_cursor.c
src/signals/: README.md  check_sig.c  signal.c
src/tokenizer/: README.md  init_type_tokens.c  tokenizer.c  tokenizer.h  tokenizer_utils.c  tokenizer_utils_three.c  tokenizer_utils_two.c
src/utils/: free_ctx.c  free_env.c  ft_getenv.c  ft_isoperator.c
subprojects/: libft.wrap
